<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/itemVip"
        android:icon="@drawable/ic_crown_24"
        android:title="@string/pref_vip_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemSort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemLayout"
        android:icon="@null"
        android:title="@null"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_view_grid"
        tools:title="@string/action_layout_grid" />

    <item
        android:id="@+id/itemEmptyTrash"
        android:title="@string/action_empty_trash"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemExtraAction"
        android:title="@string/action_extra"
        app:showAsAction="ifRoom" />

</menu>
